Fixes #14803: Improve Directives' filter in Rule details

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/ruleManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/ruleManagement.html
@@ -6,6 +6,7 @@
     <link media="screen" data-lift="with-cached-resource" href="/style/rudder/rudder-tags.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/filters.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/tags.js"></script>
+    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/tree-tag-plugin.js"></script>
   </head>
 
   <div data-lift="configuration.RuleManagement.head" ></div>
