--- a/builder/index.html
+++ b/builder/index.html
@@ -7,15 +7,19 @@
         <link rel="stylesheet" href="css/font-awesome-5.6.1.min.css?version=dev">
         <link href="css/ngToast.min.css?version=dev" rel="stylesheet">
         <link href="css/custom.css?version=dev" rel="stylesheet">
+        <link href="css/angular-filemanager-1.5.1.min.css?version=dev" rel="stylesheet">
         <!-- Needed polyfill for ie11, works in all other browsers -->
         <script src="js/polyfill.js?version=dev"></script>
         <script src="js/angular-1.3.20.min.js?version=dev"></script>
         <script src="js/angular-messages-1.3.20.min.js?version=dev"></script>
         <script src="js/angular-animate-1.3.20.min.js?version=dev"></script>
         <script src="js/angular-sanitize-1.3.20.min.js?version=dev"></script>
+        <script src="js/angular-translate.min.js"></script>
+        <script src="js/ng-file-upload.min.js"></script>
         <script src="js/ngToast-1.4.0.min.js?version=dev"></script>
         <script src="js/angular-drag-and-drop-lists.min.js?version=dev"></script>
         <script src="js/jquery-3.3.1.min.js?version=dev"></script>
+        <script src="js/angular-filemanager-1.5.1.min.js?version=dev"></script>
         <script src="js/elastic.min.js?version=dev"></script>
         <script src="js/bootstrap-3.3.7.min.js?version=dev"></script>
         <script src="js/cfengine_classes.js?version=dev"></script>
@@ -55,7 +59,7 @@
             </div>
           </div>
         </script>
-        
+
         <script type="text/ng-template" id="SaveChangesModal.html">
           <div class="modal-header">
             <h3 class="modal-title">Unsaved changes</h3>
@@ -305,7 +309,7 @@
                                 </span>
                               </div>
                             </div>
-                            <div class="form-group col-sm-12 text-center no-padding-right"> 
+                            <div class="form-group col-sm-12 text-center no-padding-right">
                               <div ng-click="addParameter()" class="btn btn-success btn-outline" >
                                 Add parameter <i class="fas fa-plus-circle"></i>
                               </div>
@@ -314,6 +318,22 @@
                         </uib-accordion-group>
 
                     </uib-accordion>
+
+                    <uib-accordion>
+
+                      <uib-accordion-group ng-init="parameter_open = false" is-open="parameter_open">
+                        <uib-accordion-heading>
+                          <i class="glyphicon" ng-class="{'glyphicon-chevron-down': parameter_open, 'glyphicon-chevron-right': !parameter_open}"></i>
+                          Resources
+                        </uib-accordion-heading>
+                        <button class="btn" ng-click="openEditor = !openEditor">open the bidule</button> {{openEditor}}
+                        <div ng-if="openEditor">
+                        <angular-filemanager></angular-filemanager>
+                        </div>
+                      </uib-accordion-group>
+
+                  </uib-accordion>
+
                     <div style="position: relative"><div ng-if="selectedTechnique.method_calls.length === 0" class="btn btn-block btn-default text-center" id="no-methods" >
                       <div class="panel-heading" style="overflow:hidden">
                         Drag and drop generic methods here from the list on the right to build target configuration for this technique. </div>
