Fixes #9445: If we filter event logs with only a start or end date, we get a super ugly error

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
@@ -30,6 +30,7 @@
           and
           <input type="text" class="pickEndInput form-control input-xs"/>
           <button id="filterLogsButton" type="button" class="btn btn-default btn-sm">Get events</button>
+          <span id="limitEventDisplayer"></span>
         </div>
 
         <table id="eventLogsGrid" class="display" cellspacing="0"></table>
